2009-05-06  Lars Hartmann  <lars (at) chaotika (dot) org>

	Rewritten lpatom with support for lpversion:
	* include/atom.h: updated.
	* src/liblpversion.c: rewritten.

	* include/version.h (lpversion_init): corrected documentation.

	Replaced latex like formatting codes with jdoc like formatting codes:
	* src/liblpxpak.c: updated.
	* include/xpak.h: updated.
	* include/util.h: updated.
	* include/archives.h: updated.

2009-04-26  Lars Hartmann  <lars (at) chaotika (dot) org>

	Added tests for lpversion_parse:
	* test/Makefile.am: added 05_lpversion_parse.
	* test/05_lpversion_parse.txt: added.
	* test/05_lpversion_parse.c (main): added.

	Added lpversion:
	* src/Makefile.am (libportage_la_SOURCES): added liblpversion.c
	* include/Makefile.am (header_HEADERS): added version.h.
	* src/liblpversion.c: added.
	* include/version.h: added.

2009-04-25  Lars Hartmann  <lars (at) chaotika (dot) org>

	* test/valgrind-wrapper: simplified and cleaned up.

2009-04-20  Lars Hartmann  <lars (at) chaotika (dot) org>

	Fixed several lint warnings:
	* src/liblpatom.c: fixed.
	* src/liblpxpak.c: fixed.
	* src/liblparchives.c: fixed.

2009-03-31  Lars Hartmann  <lars (at) chaotika (dot) org>

	* include/archives.h: extended.

2009-03-28  Lars Hartmann  <lars (at) chaotika (dot) org>

	* test/Makefile.am: simplified some tests and added
	valgrind-wrapper to EXTRA_DIST.

2009-03-27  Lars Hartmann  <lars (at) chaotika (dot) org>

	Added valgrind test-support:
	* test/valgrind-wrapper: Added wrapper script for calling tests
	with valgrind.
	* configure.ac: Added --enable-valgrind switch and some checks.
	* test/Makefile.am: Replaced libtool linking by static
	linking(required for valgrind to work).
	Check if --enable-valgrind was given to configure and start tests
	through valgrind-wrapper if so.

	Added support for archives:
	* test/Makefile.am: added targets for test/04_lparchives.
	* test/04_lparchives.tbz2: added.
	* test/04_lparchives.txt: added.
	* test/04_lparchives.c: added.