@@ -34,13 +34,11 @@
 #include <stdbool.h>
 #include <unistd.h>
 
-#define MAXLEN 1024
-
 int main(void)
 {
      lpatom_t *atom1 = NULL;
      lpatom_t *atom2 = NULL;
-     char *s, *fname, *srcpath;
+     char s[1024], *srcpath;
      bool has_failed = false;
      FILE *file;
 
@@ -50,7 +48,7 @@ int main(void)
      
      if ( (file = fopen("02_lpatom_parse.txt", "r")) == NULL )
           return EXIT_FAILURE;
-          
+
      if ( (atom1 = lpatom_create()) == NULL )
           return EXIT_FAILURE;
      lpatom_init(atom1);
@@ -58,30 +56,20 @@ int main(void)
           return EXIT_FAILURE;
      lpatom_init(atom2);
 
-     if ( (s = malloc(MAXLEN)) == NULL )
-          return EXIT_FAILURE;
-
-     while ( fgets(s, MAXLEN, file) != NULL) {
+     while ( fgets(s, sizeof(s), file) != NULL) {
           s[strlen(s)-1] = '\0';
           if ( lpatom_parse(atom1, s) == -1)
                has_failed = true;
-          else {
-               fname = lpatom_get_fullname(atom1);
-               if (strcmp(fname, s) != 0)
+          if ( lpatom_parse(atom2, s) == -1)
+               has_failed = true;
+          if (! has_failed)
+               if ( lpatom_cmp(atom1, atom2) != 0 )
                     has_failed = true;
-               free(fname);
-               if ( lpatom_parse(atom2, s) == -1 )
-                    has_failed = true;
-               else if ( lpatom_cmp(atom1, atom2) != 0 )
-                    has_failed = true;
-               
-               lpatom_reinit(atom1);
-               lpatom_reinit(atom2);
-          }
+          lpatom_reset(atom1);
+          lpatom_reset(atom2);
      }
      lpatom_destroy(atom1);
      lpatom_destroy(atom2);
-     free(s);
      fclose(file);
      if ( has_failed )
           return EXIT_FAILURE;
